# inver-synth

./: .gitignore  CLAUDE.md  ClaudeNotes.txt  DEBUG_NOTES.md  Makefile  README-JOS.md  README_KAPRE_HEADBUTTS.md  detect_device.py  doit  listen_results.py  pyproject.toml  requirements.txt  setup.sh
models/: app.py  comparison.py  e2e_cnn.py  runner.py  spectrogram_cnn.py
models/common/: architectures.py  data_generator.py  device_utils.py
reconstruction/: fm_reconstruction.py
scripts/: generate_curves.py
viz/: enhanced_model_diagrams.py  inver_synth_diagrams.py  simple_model_diagram.py
