[project]
name = "inver-synth"
version = "0.1.0"
description = "A Python implementation of the InverSynth method (Barkan, Tsiris, Koenigstein, Katz)"
authors = [
    {name = "crodriguez1a", email = "crodriguez1a@github.com"},
    {name = "mo-seph", email = "mo-seph@github.com"}
]
requires-python = ">=3.8"
dependencies = [
    "taskipy>=1.2.1",
    "synthplayer>=2.4",
    "python-dotenv>=0.14.0",
    "pandas>=1.3.0",
    "librosa>=0.8.0",
    "numba>=0.56.0",
    "torch>=1.11.0",
    "torchaudio>=0.11.0",
    "matplotlib>=3.2.2",
    "h5py>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=22.0.0",
    "isort>=5.0.9",
    "mypy>=1.0.0",
    "flake8>=5.0.0",
    "autoflake>=1.7.0",
    "pytest>=7.0.0",
]

[tool.taskipy.tasks]
test = "python -m pytest"
clean = "flake8 models/ generators/ tests/ & black models/ generators/ tests/ & isort ."
start = "python -m tasks.start"
generate = "python -m generators.fm_generator"

[tool.isort]
multi_line_output=6
include_trailing_comma="True"
force_grid_wrap=0
use_parentheses="True"
line_length=120

[tool.hatch.build.targets.wheel]
packages = ["models", "generators", "tasks"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
